--- a/course_work/project_01/personal_site/about.html
+++ b/course_work/project_01/personal_site/about.html
@@ -26,7 +26,7 @@
     <h2>Exercising</h2>
     <div>
     <img src="https://play-lh.googleusercontent.com/R5ZYobfim8RtlNb6cl6MentKEoX_RDXwHms75c78RFq-dLmemPFhYWIgMMS4iGfUPw=s200" alt="run">
-    <p>Going to the gym and exercising/lifting weights is one of favorite things to do. I go to the gym about 3 to 4 times a week and I find that it truly helps me in a variety of different ways. It's great not only for keeping me active and healthy physically, but it also helps to boost my overall mood and confidence. Crushing your fitness goals and meeting like-minded people is a plus too. </p>
+    <p>Going to the gym and exercising/lifting weights is one of my favorite things to do. I go to the gym about 3 to 4 times a week and I find that it truly helps me in a variety of different ways. It's great not only for keeping me active and healthy physically, but it also helps to boost my overall mood and confidence. Crushing your fitness goals and meeting like-minded people is a plus too. </p>
     </div>
     <hr>
     <h2>Writing</h2>
