--- a/course_work/project_01/personal_site/about.html
+++ b/course_work/project_01/personal_site/about.html
@@ -30,7 +30,7 @@
     </div>
     <hr>
     <h2>Writing</h2>
-    <img src="https://cutewallpaper.org/24/book-silhouette-clip-art/1111727914.jpg" alt="book">
+    <img src="https://media.istockphoto.com/vectors/book-icon-on-black-background-black-flat-style-vector-illustration-vector-id1161092529?k=20&m=1161092529&s=170667a&w=0&h=5V6SrBU8z5LBC5k-lsfn4FohaNlGJCTYreD4njNbXBE=" alt="book">
     <p>Writing is another passion of mine and I do it practically every day in one form or another. Whether it's jotting down notes on paper, typing them out on my laptop, or putting ideas into the various different clouds on my phone, writing is something that I really enjoy and helps to stimulate my mind and creativity. The types of writing I typically do are that of fictional stories.</p>
     <hr>
     <h2>Movies and Music</h2>
