--- a/course_work/project6/arcade/index.html
+++ b/course_work/project6/arcade/index.html
@@ -13,8 +13,8 @@
   <p>Tic-Tac-Toe</p>
   <h1 class="info"></h1>
     <div class="board">
-        <div class="space"></div>
-        <div class="space"></div>
+        <div class="space">d</div>
+        <div class="space">e</div>
         <div class="space"></div>
         <div class="space"></div>
         <div class="space"></div>
